# tgrag_bot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  WORKPLAN.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml  run.py
apps/bot/: main.py  settings.py
apps/bot/routes/: health.py
apps/bot/tg/: handlers.py
data/: webhook_url.txt
deploy/: bootstrap.sh  ubuntu-setup.sh
docker/: Dockerfile
webapp/: app.js  index.html  styles.css
